<resources>
    <string name="app_name">Project 4B</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fahrenheit_to_celsius_converter">Farenheit to Celcius Converter</string>
    <string name="enter_fareheit">Enter Fareheit</string>
    <string name="enter_celcius">Enter Celcius</string>
    <string name="calculate_degree">calculate</string>
    <string name="miles_to_klilometer_calculator">Miles to Kilometer Converter</string>
    <string name="enter_miles">enter miles</string>
    <string name="enter_kilometer">enter kilometer</string>
    <string name="calculate">calculate</string>
    <string name="tip_calculator">Tip Calculator</string>
    <string name="total_bill">total bill</string>e
    <string name="tip_percentage">tip percentage</string>
    <string name="people"># people</string>
    <string name="calculatetip">calculate</string>
</resources>
